# openclash

./: .gitignore  Cargo.toml  LICENSE  build.rs
.github/workflows/: ci.yml  post-release-verify.yml  release-build.yml  release-publish-crates.yml  release-publish-npm.yml  release-publish-pypi.yml
scripts/: assemble_npm_packages.py  assemble_pypi_packages.py  build_target.sh  package_targets.py  smoke_test.sh  sync_version.py  update_mihomo_assets.sh
src/: cli.rs  config.rs  controller.rs  dashboard.rs  i18n.rs  main.rs  mixin.rs  proxy.rs  resources.rs  service.rs  subscription.rs  test_proxy.rs  tun.rs  utils.rs  web.rs
src/tui/: app.rs  event.rs  mod.rs  theme.rs  ui.rs
