[package]
name = "openclash"
version = "0.1.0"
edition = "2021"
authors = ["openclash contributors"]
description = "Rust-native CLI for managing Clash/Mihomo proxy service"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/ip2a/openclash"
repository = "https://github.com/ip2a/openclash"
keywords = ["clash", "mihomo", "proxy", "cli"]
categories = ["command-line-utilities", "network-programming"]
include = [
    "/src/**",
    "/resources/**",
    "/Cargo.toml",
    "/Cargo.lock",
    "/README.md",
    "/LICENSE",
]

[dependencies]
axum = "0.7"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
tokio = { version = "1.37", features = ["full"] }
dirs = "5.0"
colored = "2.1"
anyhow = "1.0"
thiserror = "1.0"
chrono = "0.4"
which = "6.0"
once_cell = "1.19"
rust-embed = { version = "8.5", features = ["compression", "interpolate-folder-path"] }
libc = "0.2"
crossterm = "0.28"
ratatui = "0.29"
maud = "0.26"
flate2 = "1.1"
zip = { version = "2.4", default-features = false, features = ["deflate"] }

[profile.release]
opt-level = 3
lto = true
strip = true
